hid vid bg on mobile. fixed scroll/target issues

--- a/dev/styles/_responsive.scss
+++ b/dev/styles/_responsive.scss
@@ -129,6 +129,19 @@
 }
 
 @media (max-width: 480px) {
+	
+	header .wrapper p, header form, .credit-container #credit {
+		text-shadow: none;
+		box-shadow: none;
+	}
+
+	.filter {
+		opacity: 1;
+	}
+
+	button.play, button.pause {
+		display: none;
+	}
 
 	.toggleContainer {
 		flex-direction: column;
